LIB-612 Fix Hours wrap/cutoff re: larger font-size+mobile vertical

--- a/src/scss/custom/_hours.scss
+++ b/src/scss/custom/_hours.scss
@@ -80,3 +80,20 @@
     @include opacity(.9);
   }
 }
+
+@media (max-width: 575px) {
+  #banner-hours {
+    table {
+      caption {
+        margin-left: 1.25rem;
+        margin-right: 1.25rem;
+      }
+
+      tr th,
+      tr td {
+        padding-left: 1.25rem;
+        padding-right: 1.25rem;
+      }
+    }
+  }
+}
